fix: navbar on small devices

--- a/public/assets/stylesheets/main.css
+++ b/public/assets/stylesheets/main.css
@@ -125,6 +125,10 @@ nav a:visited {
   font-size: 1.3rem;
   border-radius: 3px;
   color: var(--color-nav-link);
+  text-align: center;
+  display: flex;
+  height: auto;
+  width: auto;
 }
 
 nav a:hover,
@@ -142,7 +146,7 @@ nav a:active {
   border-radius: 5px;
 }
 
-@media screen and (max-width: 359px) {
+@media screen and (max-width: 760px) {
   nav {
     justify-content: start;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
